cloud/infra/k8s/appflowy/appflowy-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appflowy
